# SystemBonus

./: .gitignore  README.md  docker-compose-dev.yaml  redis.conf
backend/: Dockerfile_backend  jwt_auth.py  main.py  pyproject.toml  settings.py
backend/api/: base_schemas.py
backend/api/actions/: auth.py  users.py
backend/api/handlers/: schemas.py
backend/api/handlers/auth/: handlers.py  schemas.py
backend/api/handlers/users/: handlers.py  schemas.py
backend/db/: base.py  session.py
backend/db/cache/: session.py
backend/db/users/: dals.py  models.py  user_dal.py
backend/migrations/: env.py
backend/migrations/versions/: 2024_01_19_2231-f97d5b3c9431_alter_table_users.py
