[tool.poetry]
name = "backend"
version = "0.1.0"
description = "api of bonus system"
authors = ["LyaKakoyPC <LYAKAKOYXY@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
fastapi = "^0.109.0"
uvicorn = {extras = ["standart"], version = "^0.26.0"}
sqlalchemy = "^2.0.25"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
bcrypt = "^4.1.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
